corpus/case_of.txt
==================
Case of block
==================

case of
: ($condition)

end case

case of
: ($condition)

else

end case

au cas ou
: ($condition)

fin de cas

au cas ou
: ($condition)

sinon

fin de cas

---

(source   (case_block     (case_of )    (end_case ))  (case_block     (case_of )    (else )    (end_case ))  (case_block     (case_of )    (end_case ))  (case_block     (case_of )    (else )    (end_case )))
