corpus/for.txt
==================
For block
==================

for ($counter;$start;$end;$step)

end for

boucle ($counter;$start;$end;$step)

fin de boucle

---

(source   (for_block     (for )    (end_for ))  (for_block     (for )    (end_for )))
