corpus/if.txt
==================
If block
==================

if ($condition)

end if

if ($condition)

else

end if

si ($condition)

fin de si

si ($condition)

sinon

fin de si

---

(source   (if_block     (if )    (end_if ))  (if_block     (if )    (else )    (end_if ))  (if_block     (if )    (end_if ))  (if_block     (if )    (else )    (end_if )))
