corpus/use.txt
==================
Use block
==================

use ($object)

end use

utiliser ($object)

fin utiliser

---

(source   (use_block     (use )    (end_use ))  (use_block     (use )    (end_use )))
